ENG-8222 fixed license check failure